@@ -4,7 +4,7 @@
 #
 
 #
-# Till Kamppeter (till.kamppeter@gmx.net)
+# Till Kamppeter (till.kamppeter@gmail.com)
 #
 # Copyright 2001 Till Kamppeter
 #
