@@ -10,7 +10,7 @@
 #
  
 #
-# Till Kamppeter (till.kamppeter@gmx.net)
+# Till Kamppeter (till.kamppeter@gmail.com)
 #
 # Copyright 2007 Till Kamppeter
 #
